fix whitespace under coundown in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ color: var(--secondary-color)!important;
 
 .home-container{
     background-color: var(--secondary-color);
-    padding: 78px 0px 120px 0px;
+    padding: 78px 0px 30px 0px;
 }
 
 .home-container .container-fluid{
